Fix overflow-x, style AddToilet Form & add textarea

--- a/src/App.css
+++ b/src/App.css
@@ -165,10 +165,23 @@ h6 {
   box-sizing: border-box;
   text-align: center;
   font-size: 18px;
+  padding: 16px;
+  height: 48px;
+  width: 80%;
+  border-radius: 4px;
+  color:black;
+}
+
+.addToiletFormElements textarea {
+  display: inline-block;
+  box-sizing: border-box;
+  text-align: center;
+  font-size: 18px;
   padding: 12px 16px;
   height: 48px;
   width: 80%;
   border-radius: 4px;
+  color:black;
 }
 
 .editToiletForm {
