--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ body {
   height: 100%;
   width: 100%;
   display: flex;
+  overflow-x: hidden;
 }
 
 
